fontend css fixes: make buttons wrap better; add scrollbar to marker / video area

--- a/styles/sass/_options.scss
+++ b/styles/sass/_options.scss
@@ -50,6 +50,7 @@ $sand-light:#D3D0CA;
   @include transition(all 0.2s);
   padding:6px 8px;
   border-radius: 3px;
+  white-space: nowrap;
 }
 
 @mixin buttons {
